[HER-9] Load Properties and assign them from the database. Started constructing logic to do stuff with them (similar to stages in pegasus)

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1769,58 +1769,100 @@ th {
   text-align: left;
 }
 
-/* line 14, ../sass/_tables.scss */
-table#display-table {
+/* line 13, ../sass/_tables.scss */
+#display-container {
+  margin: 20px;
+  background-color: #f7f7f7;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  float: left;
   width: 100%;
-  color: #222222;
-}
-/* line 18, ../sass/_tables.scss */
-table#display-table tr {
-  border-bottom: 1px solid #999999;
 }
 /* line 21, ../sass/_tables.scss */
-table#display-table tr:hover {
-  background-color: rgba(131, 210, 255, 0.1);
+#display-container #home-toolbar {
+  width: 100%;
+  height: 50px;
 }
 /* line 25, ../sass/_tables.scss */
-table#display-table tr td, table#display-table tr th {
-  padding: 10px 15px;
+#display-container #home-toolbar ul {
+  list-style-type: none;
+  padding: 15px 25px;
 }
 /* line 29, ../sass/_tables.scss */
-table#display-table tr th {
-  text-transform: capitalize;
-}
-/* line 35, ../sass/_tables.scss */
-table#display-table tr td.display-name {
-  width: 65%;
+#display-container #home-toolbar ul li {
+  margin: 0 5px;
+  padding: 10px 20px;
+  float: right;
+  color: #222222;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  cursor: pointer;
 }
 /* line 38, ../sass/_tables.scss */
-table#display-table tr td.display-name:hover {
+#display-container #home-toolbar ul li:hover {
+  background-color: #eeeeee;
+}
+/* line 45, ../sass/_tables.scss */
+#display-container table#display-table {
+  color: #222222;
+  margin: 5%;
+  width: 90%;
+}
+/* line 50, ../sass/_tables.scss */
+#display-container table#display-table tr {
+  border-bottom: 1px solid #999999;
+}
+/* line 53, ../sass/_tables.scss */
+#display-container table#display-table tr:last-child {
+  border: none;
+}
+/* line 56, ../sass/_tables.scss */
+#display-container table#display-table tr:hover {
+  background-color: rgba(131, 210, 255, 0.1);
+}
+/* line 60, ../sass/_tables.scss */
+#display-container table#display-table tr td, #display-container table#display-table tr th {
+  padding: 10px 15px;
+}
+/* line 64, ../sass/_tables.scss */
+#display-container table#display-table tr th {
+  text-transform: capitalize;
+}
+/* line 70, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-name {
+  width: 65%;
+}
+/* line 73, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-name:hover {
   text-decoration: underline;
   cursor: pointer;
 }
-/* line 43, ../sass/_tables.scss */
-table#display-table tr td.display-date {
+/* line 78, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-date {
   width: 10%;
   color: #555555;
 }
-/* line 47, ../sass/_tables.scss */
-table#display-table tr td.display-by {
+/* line 82, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-by {
   width: 20%;
 }
-/* line 50, ../sass/_tables.scss */
-table#display-table tr td.display-action {
+/* line 85, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-action {
   width: 5;
   text-align: center;
   cursor: pointer;
 }
+/* line 90, ../sass/_tables.scss */
+#display-container table#display-table tr td.display-action:hover {
+  color: #00aaff;
+}
 
-/* line 61, ../sass/_tables.scss */
+/* line 100, ../sass/_tables.scss */
 .table {
   width: 100%;
   margin-bottom: 20px;
 }
-/* line 70, ../sass/_tables.scss */
+/* line 109, ../sass/_tables.scss */
 .table thead > tr > th,
 .table thead > tr > td,
 .table tbody > tr > th,
@@ -1832,12 +1874,12 @@ table#display-table tr td.display-action {
   vertical-align: top;
   border-top: 1px solid #dddddd;
 }
-/* line 79, ../sass/_tables.scss */
+/* line 118, ../sass/_tables.scss */
 .table thead > tr > th {
   vertical-align: bottom;
   border-bottom: 2px solid #dddddd;
 }
-/* line 88, ../sass/_tables.scss */
+/* line 127, ../sass/_tables.scss */
 .table caption + thead tr:first-child th, .table caption + thead tr:first-child td,
 .table colgroup + thead tr:first-child th,
 .table colgroup + thead tr:first-child td,
@@ -1845,16 +1887,16 @@ table#display-table tr td.display-action {
 .table thead:first-child tr:first-child td {
   border-top: 0;
 }
-/* line 94, ../sass/_tables.scss */
+/* line 133, ../sass/_tables.scss */
 .table tbody + tbody {
   border-top: 2px solid #dddddd;
 }
-/* line 99, ../sass/_tables.scss */
+/* line 138, ../sass/_tables.scss */
 .table .table {
   background-color: #ebeced;
 }
 
-/* line 112, ../sass/_tables.scss */
+/* line 151, ../sass/_tables.scss */
 .table-condensed thead > tr > th,
 .table-condensed thead > tr > td,
 .table-condensed tbody > tr > th,
@@ -1864,11 +1906,11 @@ table#display-table tr td.display-action {
   padding: 5px;
 }
 
-/* line 123, ../sass/_tables.scss */
+/* line 162, ../sass/_tables.scss */
 .table-bordered {
   border: 1px solid #dddddd;
 }
-/* line 130, ../sass/_tables.scss */
+/* line 169, ../sass/_tables.scss */
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > th,
@@ -1877,59 +1919,59 @@ table#display-table tr td.display-action {
 .table-bordered > tfoot > tr > td {
   border: 1px solid #dddddd;
 }
-/* line 138, ../sass/_tables.scss */
+/* line 177, ../sass/_tables.scss */
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
 }
 
-/* line 153, ../sass/_tables.scss */
+/* line 192, ../sass/_tables.scss */
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
 }
 
-/* line 164, ../sass/_tables.scss */
+/* line 203, ../sass/_tables.scss */
 .table-booking > tbody > tr.inprogress > td,
 .table-booking > tbody > tr.inprogress > th {
   background-color: #dff0d8;
 }
-/* line 170, ../sass/_tables.scss */
+/* line 209, ../sass/_tables.scss */
 .table-booking > tbody > tr.future > td,
 .table-booking > tbody > tr.future > th {
   background-color: #d9edf7;
 }
-/* line 176, ../sass/_tables.scss */
+/* line 215, ../sass/_tables.scss */
 .table-booking > tbody > tr.pending > td,
 .table-booking > tbody > tr.pending > th {
   background-color: #fcf8e3;
 }
-/* line 182, ../sass/_tables.scss */
+/* line 221, ../sass/_tables.scss */
 .table-booking > tbody > tr.disabled > td,
 .table-booking > tbody > tr.disabled > th {
   background-color: #f2dede;
 }
 
-/* line 197, ../sass/_tables.scss */
+/* line 236, ../sass/_tables.scss */
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
   background-color: whitesmoke;
 }
 
-/* line 208, ../sass/_tables.scss */
+/* line 247, ../sass/_tables.scss */
 table col[class*="col-"] {
   float: none;
   display: table-column;
 }
 
-/* line 216, ../sass/_tables.scss */
+/* line 255, ../sass/_tables.scss */
 table td[class*="col-"],
 table th[class*="col-"] {
   float: none;
   display: table-cell;
 }
 
-/* line 234, ../sass/_tables.scss */
+/* line 273, ../sass/_tables.scss */
 .table > thead > tr > td.active,
 .table > thead > tr > th.active, .table > thead > tr.active > td, .table > thead > tr.active > th,
 .table > tbody > tr > td.active,
@@ -2010,7 +2052,7 @@ table th[class*="col-"] {
 }
 
 @media (max-width: 768px) {
-  /* line 251, ../sass/_tables.scss */
+  /* line 290, ../sass/_tables.scss */
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
@@ -2020,12 +2062,12 @@ table th[class*="col-"] {
     border: 1px solid #dddddd;
     -webkit-overflow-scrolling: touch;
   }
-  /* line 261, ../sass/_tables.scss */
+  /* line 300, ../sass/_tables.scss */
   .table-responsive > .table {
     margin-bottom: 0;
     background-color: #fff;
   }
-  /* line 271, ../sass/_tables.scss */
+  /* line 310, ../sass/_tables.scss */
   .table-responsive > .table > thead > tr > th,
   .table-responsive > .table > thead > tr > td,
   .table-responsive > .table > tbody > tr > th,
@@ -2034,11 +2076,11 @@ table th[class*="col-"] {
   .table-responsive > .table > tfoot > tr > td {
     white-space: nowrap;
   }
-  /* line 279, ../sass/_tables.scss */
+  /* line 318, ../sass/_tables.scss */
   .table-responsive > .table-bordered {
     border: 0;
   }
-  /* line 288, ../sass/_tables.scss */
+  /* line 327, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr > th:first-child,
   .table-responsive > .table-bordered > thead > tr > td:first-child,
   .table-responsive > .table-bordered > tbody > tr > th:first-child,
@@ -2047,7 +2089,7 @@ table th[class*="col-"] {
   .table-responsive > .table-bordered > tfoot > tr > td:first-child {
     border-left: 0;
   }
-  /* line 292, ../sass/_tables.scss */
+  /* line 331, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr > th:last-child,
   .table-responsive > .table-bordered > thead > tr > td:last-child,
   .table-responsive > .table-bordered > tbody > tr > th:last-child,
@@ -2056,7 +2098,7 @@ table th[class*="col-"] {
   .table-responsive > .table-bordered > tfoot > tr > td:last-child {
     border-right: 0;
   }
-  /* line 298, ../sass/_tables.scss */
+  /* line 337, ../sass/_tables.scss */
   .table-responsive > .table-bordered > thead > tr:last-child > th,
   .table-responsive > .table-bordered > thead > tr:last-child > td,
   .table-responsive > .table-bordered > tbody > tr:last-child > th,
