--- a/assets/sass/_tables.scss
+++ b/assets/sass/_tables.scss
@@ -10,52 +10,91 @@ table {
 th {
   text-align: left;
 }
-
-table#display-table {
+#display-container {
+  margin: 20px;
+  background-color: $almost-white;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
+  float: left;
   width: 100%;
-  color: $gray-darker;
 
-  tr {
-	border-bottom: 1px solid $gray-light;
+  #home-toolbar {
+	width: 100%;
+	height: 50px;
 
-	&:hover {
-	  background-color: $element-active-near-transparent;
-	}
+	ul {
+	  list-style-type: none;
+	  padding: 15px 25px;
 
-	td, th {
-	  padding: 10px 15px;
-	}
-
-	th {
-		text-transform: capitalize;
-	}
-
-	td {
-
-	  &.display-name {
-		width: 65%;
+	  li {
+		margin: 0 5px;
+		padding: 10px 20px;
+		float: right;
+		color: $gray-darker;
+		background-color: $almost-white;
+		border-radius: 10px;
+		cursor: pointer;
 
 		&:hover {
-		  text-decoration: underline;
-		  cursor: pointer;
+		  background-color: $gray-lighter;
 		}
 	  }
-	  &.display-date {
-		width: 10%;
-		color: $gray;
+	}
+  }
+
+  table#display-table {
+	color: $gray-darker;
+	margin: 5%;
+	width: 90%;
+
+	tr {
+	  border-bottom: 1px solid $gray-light;
+
+	  &:last-child {
+		border: none;
 	  }
-	  &.display-by {
-		width: 20%;
+	  &:hover {
+		background-color: $element-active-near-transparent;
 	  }
-	  &.display-action {
-		width: 5;
-		text-align: center;
-		cursor: pointer;
+
+	  td, th {
+		padding: 10px 15px;
+	  }
+
+	  th {
+		  text-transform: capitalize;
+	  }
+
+	  td {
+
+		&.display-name {
+		  width: 65%;
+
+		  &:hover {
+			text-decoration: underline;
+			cursor: pointer;
+		  }
+		}
+		&.display-date {
+		  width: 10%;
+		  color: $gray;
+		}
+		&.display-by {
+		  width: 20%;
+		}
+		&.display-action {
+		  width: 5;
+		  text-align: center;
+		  cursor: pointer;
+
+		  &:hover {
+			color: $element-modify;
+		  }
+		}
 	  }
 	}
   }
 }
-
 // Baseline styles
 
 .table {
